Fixed gap on top of page in mobile
Changed CSS to look better in mobile mode.

--- a/views/stylesheets/application.sass
+++ b/views/stylesheets/application.sass
@@ -27,8 +27,9 @@
       padding-top: 3px
 
 body
-  padding-top: 60px
   margin-bottom: 30px
+  .main-content
+    padding-top: 50px
 
 .navbar-inverse .navbar-inner
   +background-image(url('/images/speckles.png'), linear-gradient(top, #222222, #111111))
